--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <body>
     <header>
       <!-- create your nav here -->
+       <nav class="menu">
+        <a href="#">About</a>
+        <a href="#">Upcoming Shows</a>
+        <a href="#">Merch</a>
+       </nav>
       <h1>World of Rock</h1>
       <p>
         Experience the ultimate fusion of rock from all over the world as The
